plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.clientatlas'
version = '0.0.1-SNAPSHOT'
description = 'Customer Directory backend for ClientAtlas'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' 
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.security:spring-security-oauth2-jose'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.postgresql:postgresql:42.7.7'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
	//  compileOnly 'org.projectlombok:lombok:1.18.30'
	//  annotationProcessor 'org.projectlombok:lombok:1.18.30'
	//  testImplementation 'org.junit.jupiter:junit-jupiter-api'
}

tasks.named('test') {
	useJUnitPlatform()
}